Fixed a bug where the image is stretched on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -423,6 +423,10 @@ tr{
     .profile_form select{
         width: 75%;
     }
+
+    .enlarge-product-img{
+        height: unset;
+    }
 }
 
 @media screen and (max-width: 768px) {
